# deployee_to_vercel

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
app/api/: __init__.py  authentication.py  token_auth.py
app/core/: __init__.py  cors.py
app/exception/: __init__.py  handler.py
app/models/: __init__.py  authentication_model.py
app/utils/: __init__.py  token_utils.py
fastapi_practice/: main.py
